--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "imports": {
     "site/": "./",
     "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.70.6/",
+    "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.26.3/",
     "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.45.1/",
     "$fresh/": "https://deno.land/x/fresh@1.6.8/",
     "preact": "https://esm.sh/preact@10.19.2",
