--- a/deno.json
+++ b/deno.json
@@ -1,18 +1,20 @@
 {
   "imports": {
-    "site/": "./",
-    "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.70.6/",
+    "deco-sites/roosterlexical897/": "./",
     "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.26.3/",
-    "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.45.1/",
-    "$fresh/": "https://deno.land/x/fresh@1.6.8/",
+    "$live/": "https://denopkg.com/deco-cx/deco@1.70.6/",
+    "deco/": "https://denopkg.com/deco-cx/deco@1.70.6/",
+    "$fresh/": "https://deno.land/x/fresh@1.6.5/",
     "preact": "https://esm.sh/preact@10.19.2",
     "preact/": "https://esm.sh/preact@10.19.2/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.4.0",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.2",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
+    "twind": "https://esm.sh/twind@0.16.19",
+    "twind/": "https://esm.sh/twind@0.16.19/",
     "std/": "https://deno.land/std@0.190.0/",
-    "partytown/": "https://denopkg.com/deco-cx/partytown@0.4.8/",
-    "daisyui": "npm:daisyui@4.4.19"
+    "partytown/": "https://deno.land/x/partytown@0.4.8/",
+    "apps/": "https://denopkg.com/deco-cx/apps@0.45.1/"
   },
   "tasks": {
     "start": "deno task bundle && deno run -A --unstable --watch=tailwind.css,sections/,functions/,loaders/,actions/,workflows/,accounts/,.env dev.ts",
