--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "site/": "./",
     "deco/": "https://cdn.jsdelivr.net/gh/deco-cx/deco@1.70.6/",
     "apps/": "https://cdn.jsdelivr.net/gh/deco-cx/apps@0.45.1/",
+    "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.26.5/",
     "$fresh/": "https://deno.land/x/fresh@1.6.8/",
     "preact": "https://esm.sh/preact@10.19.2",
     "preact/": "https://esm.sh/preact@10.19.2/",
@@ -10,6 +11,7 @@
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "std/": "https://deno.land/std@0.190.0/",
+    
     "partytown/": "https://denopkg.com/deco-cx/partytown@0.4.8/",
     "daisyui": "npm:daisyui@4.4.19"
   },
